--- a/.github/workflows/artifact_Noman.yml
+++ b/.github/workflows/artifact_Noman.yml
@@ -40,6 +40,8 @@ jobs:
           npm install -g pkg typescript
 
       - name: Build EXE
+        env:
+          NODE_OPTIONS: "--max-old-space-size=4096"
         run: |
           New-Item -ItemType Directory -Force -Path ./node_modules/piscina
           robocopy ./piscina ./node_modules/piscina /COPYALL /E /is /it; if ($lastexitcode -lt 8) { $global:LASTEXITCODE = $null }
